syntax = "proto3";

package minerpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/blockchainpb/minerpb";

import "mir/codegen_extensions.proto";
import "blockchainpb/payloadpb/payloadpb.proto";

message Event {
  option (mir.event_class) = true;

  oneof type {
    option (mir.event_type) = true;

    BlockRequest  block_request = 1;
    NewHead       new_head      = 2;
  }
}

message BlockRequest {
  option (mir.event) = true;
  
  uint64                  head_id = 1;
  payloadpb.Payload    payload = 2;
}

message NewHead {
  option (mir.event) = true;
  
  uint64                  head_id = 1;
}